<resources>
    <string name="app_name">LittleCoffe 2.0</string>
    <string name="page_title">Home</string>
    <string name="Carrinho">Carrinho</string>
    <string name="Compras_cliente">Compras_cliente</string>
    <string name="Coffe_Beans">Coffe Beans</string>
    <string name="Classic_Coffe">Classic Coffe</string>
    <string name="Desserts">Desserts</string>
    <string name="Signature_Coffe">Signature</string>
    <string name="home">Home</string>
    <string name="Search">Search</string>
    <string name="Favorites">Favorites</string>
    <string name="Produto">Produto</string>
    <string name="Tipos">Types</string>
    <string name="Preço">Preço</string>
    <string name="Product_Detail">Product_Detail</string>
    <string name="Product_Image">Product_Image</string>
    <string name="Best_Choice">Best Choice</string>
    <string name="See_more">See all</string>
    <string name="Offers">Offers</string>
    <string name="produto_offer">Produto_Offer</string>
    <string name="normal_price">20 USD</string>
    <string name="offer_price">12 USD</string>
    <string name="product_offer_img">Product_Offer_img</string>
</resources>