<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#272425">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_top_bar"
            app:navigationIcon="@drawable/perfil"
            app:title="@string/page_title"
            app:titleMarginStart="30dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#272425"
            app:tabContentStart="25dp"
            app:tabIndicator="@drawable/tab_seletor"
            app:tabMode="scrollable"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Coffe_Beans" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Classic_Coffe" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Desserts" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Signature_Coffe" />


        </com.google.android.material.tabs.TabLayout>


    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@drawable/custom_card_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginStart="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Search"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Favorites"
            android:layout_marginStart="46dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#423939"
            app:fabSize="mini"
            app:tint="@color/white"
            android:src="@drawable/home"
            android:contentDescription="@string/home" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#423939"
            app:tint="@color/white"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/Search" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="16dp"
            app:fabSize="mini"
            android:src="@drawable/ic_favorites"
            app:tint="@color/white"
            android:backgroundTint="#423939"
            android:contentDescription="@string/Favorites" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bestChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/nestedScrollView"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Best_Choice"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/See_more"
            android:textColor="#b97a67"
            android:textSize="17sp"
            android:layout_marginStart="130dp"/>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recomend_Choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bestChoice"
        tools:listitem="@layout/best_choices_list"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="180dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/Recomend_Choices"
        android:layout_marginTop="400dp">

        <TextView
            android:id="@+id/Offers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Offers"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/See_more"
            android:textColor="#b97a67"
            android:textSize="17sp"
            android:layout_marginStart="207dp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="375dp"
        android:layout_height="119dp"
        android:layout_gravity="center|right"
        android:layout_marginTop="460dp"
        app:cardCornerRadius="10dp"
        app:layout_anchor="@id/Offers"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borda_com_radius_custom"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cookie"
                android:contentDescription="@string/product_offer_img" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/produto_offer"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_price"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offer_price"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginStart="20dp"
                android:backgroundTint="#815143"
                android:src="@drawable/advance"
                app:fabCustomSize="40dp"
                app:tint="@color/white"
                android:contentDescription="@string/Product_Detail" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

